--- a/P1_trial.ipynb
+++ b/P1_trial.ipynb
@@ -2,84 +2,166 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-26T04:46:47.918548Z",
-     "start_time": "2019-08-26T04:46:46.037642Z"
+     "end_time": "2019-08-26T15:46:02.414977Z",
+     "start_time": "2019-08-26T15:46:00.915259Z"
     }
    },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "<bound method NDFrame.describe of           id            author  ...                          title                               url\n",
-       "0          1            王子江 张寒  ...                   （体育）题：乒乓女球迷　  http://home.xinhua-news.com/gdsd\n",
-       "1          2               夏文辉  ...              哈佛大学为何取消这些新生入选资格？  http://home.xinhua-news.com/gdsd\n",
-       "2          3                张旌  ...           法国议会选举　马克龙有望获“压倒性胜利”  http://home.xinhua-news.com/gdsd\n",
-       "3          4                王衡  ...          （经济）甘肃集中开工35个重点交通建设项目  http://home.xinhua-news.com/gdsd\n",
-       "4          5                邹峥  ...   （体育）（2）冰球——国家女子冰球队海外选秀在多伦多展开  http://home.xinhua-news.com/gdsd\n",
-       "5          6               郑焕松  ...      （文化）（3）电影《血战湘江》举行清华大学巡映活动  http://home.xinhua-news.com/gdsd\n",
-       "6          7               郑焕松  ...      （文化）（2）电影《血战湘江》举行清华大学巡映活动  http://home.xinhua-news.com/gdsd\n",
-       "7          8               郑焕松  ...      （文化）（1）电影《血战湘江》举行清华大学巡映活动  http://home.xinhua-news.com/gdsd\n",
-       "8          9  LISELOTTE SABROE  ...       [9]（外代二线）足球——国际友谊赛：德国平丹麦  http://home.xinhua-news.com/gdsd\n",
-       "9         10  LISELOTTE SABROE  ...       [7]（外代二线）足球——国际友谊赛：德国平丹麦  http://home.xinhua-news.com/gdsd\n",
-       "10        11  LISELOTTE SABROE  ...       [8]（外代二线）足球——国际友谊赛：德国平丹麦  http://home.xinhua-news.com/gdsd\n",
-       "11        12  LISELOTTE SABROE  ...       [5]（外代二线）足球——国际友谊赛：德国平丹麦  http://home.xinhua-news.com/gdsd\n",
-       "12        13  LISELOTTE SABROE  ...       [6]（外代二线）足球——国际友谊赛：德国平丹麦  http://home.xinhua-news.com/gdsd\n",
-       "13        14  LISELOTTE SABROE  ...       [4]（外代二线）足球——国际友谊赛：德国平丹麦  http://home.xinhua-news.com/gdsd\n",
-       "14        15  LISELOTTE SABROE  ...       [2]（外代二线）足球——国际友谊赛：德国平丹麦  http://home.xinhua-news.com/gdsd\n",
-       "15        16  LISELOTTE SABROE  ...       [3]（外代二线）足球——国际友谊赛：德国平丹麦  http://home.xinhua-news.com/gdsd\n",
-       "16        17  LISELOTTE SABROE  ...       [1]（外代二线）足球——国际友谊赛：德国平丹麦  http://home.xinhua-news.com/gdsd\n",
-       "17        18               NaN  ...             伊拉克安巴尔省发生自杀式袭击７人死亡  http://home.xinhua-news.com/gdsd\n",
-       "18        19                张旌  ...            “萨德”环评将重启　在韩部署或推迟一年  http://home.xinhua-news.com/gdsd\n",
-       "19        20      LOVELY GHOSH  ...                  [5]（外代二线）蚕丝生产  http://home.xinhua-news.com/gdsd\n",
-       "20        21      LOVELY GHOSH  ...                  [4]（外代二线）蚕丝生产  http://home.xinhua-news.com/gdsd\n",
-       "21        22      LOVELY GHOSH  ...                  [3]（外代二线）蚕丝生产  http://home.xinhua-news.com/gdsd\n",
-       "22        23      LOVELY GHOSH  ...                  [2]（外代二线）蚕丝生产  http://home.xinhua-news.com/gdsd\n",
-       "23        24      LOVELY GHOSH  ...                  [1]（外代二线）蚕丝生产  http://home.xinhua-news.com/gdsd\n",
-       "24        25       INACIO ROSA  ...         [7]（外代二线）足球——世预赛：葡萄牙备战  http://home.xinhua-news.com/gdsd\n",
-       "25        26       INACIO ROSA  ...         [6]（外代二线）足球——世预赛：葡萄牙备战  http://home.xinhua-news.com/gdsd\n",
-       "26        27       INACIO ROSA  ...         [5]（外代二线）足球——世预赛：葡萄牙备战  http://home.xinhua-news.com/gdsd\n",
-       "27        28       INACIO ROSA  ...         [4]（外代二线）足球——世预赛：葡萄牙备战  http://home.xinhua-news.com/gdsd\n",
-       "28        29       INACIO ROSA  ...         [3]（外代二线）足球——世预赛：葡萄牙备战  http://home.xinhua-news.com/gdsd\n",
-       "29        30       INACIO ROSA  ...         [2]（外代二线）足球——世预赛：葡萄牙备战  http://home.xinhua-news.com/gdsd\n",
-       "...      ...               ...  ...                            ...                               ...\n",
-       "89581  89588               NaN  ...         乐视危局：靠卖资产续命 员工被猎头大规模拉黑  http://tech.sina.com.cn/i/2017-0\n",
-       "89582  89589               NaN  ...        江苏保级真悬了 近3年1铁律证明其几乎保级无望  http://sports.ifeng.com/a/201706\n",
-       "89583  89590               NaN  ...      火灾与脱欧炙烤英国首相 特雷莎·梅面临空前政治压力  http://world.huanqiu.com/hot/201\n",
-       "89584  89591               NaN  ...       又一自动驾驶公司拿加州路测牌照 这回是王劲的景驰  http://www.cnbeta.com/articles/t\n",
-       "89585  89592               NaN  ...    土耳其近590名士兵疑食物中毒 被送往医院救治（组图）  http://world.huanqiu.com/hot/201\n",
-       "89586  89593         屠震林 PS040  ...      “齐心协力”--江苏苏宁发布足协杯对阵河南建业海报  http://sports.ifeng.com/a/201706\n",
-       "89587  89594                张怡  ...             中证午评：A股跳水 蓝筹暂歇热点熄火  http://www.cs.com.cn/gppd/201706\n",
-       "89588  89595               NaN  ...           业内人士解释为什么OPPO供货能力强无敌  http://www.cnbeta.com/articles/t\n",
-       "89589  89596             周佳 整理  ...                机构推荐：下周具备布局潜力金股  http://www.cs.com.cn/gppd/tzpj/2\n",
-       "89590  89597               NaN  ...        美军击落叙战机激怒俄罗斯 俄警告将瞄准美军战机  http://mil.news.sina.com.cn/worl\n",
-       "89591  89598             周佳 整理  ...           机构解析：下周热点板块及个股探秘（附股）  http://www.cs.com.cn/gppd/hyyj/2\n",
-       "89592  89599                张怡  ...             新三板午评：三板做市指数刷新阶段低点  http://www.cs.com.cn/gppd/201706\n",
-       "89593  89600               NaN  ...              [及时点]我们不需要“百变老太太”  http://column.cankaoxiaoxi.com/p\n",
-       "89594  89601               NaN  ...            Debian 9 Stretch 发布  http://www.cnbeta.com/articles/s\n",
-       "89595  89602               费天元  ...         地产股拉升难阻市场颓势 三大指数早盘集体跳水  http://www.cs.com.cn/gppd/201706\n",
-       "89596  89603               NaN  ...           MSCI闯关成功会是A股的一针强心剂吗？  http://column.cankaoxiaoxi.com/p\n",
-       "89597  89604            申玉彬 整理  ...                  博友午评：风格转换前的阵痛  http://www.cs.com.cn/gppd/201706\n",
-       "89598  89605               NaN  ...        因为犯罪现场的一根头发，他坐冤狱41年后终获释  http://world.huanqiu.com/hot/201\n",
-       "89599  89606               NaN  ...         早间机构看市：市场将再次探底 两类股逢低布局  http://www.cs.com.cn/gppd/201706\n",
-       "89600  89607               NaN  ...           私募：蓝筹风格难切换 业绩估值相配是王道  http://www.cs.com.cn/gppd/201706\n",
-       "89601  89608                吴瞬  ...            纳入MSCI指数 A股长期配置价值提升  http://www.cs.com.cn/gppd/201706\n",
-       "89602  89609        李杭_BJS4645  ...       武汉千余警察出动 抓获808名俊男靓女全是诈骗犯  http://news.163.com/17/0614/14/C\n",
-       "89603  89610            申玉彬 整理  ...                博友早评：震荡有利消化套牢筹码  http://www.cs.com.cn/gppd/201706\n",
-       "89604  89611               NaN  ...            配骁龙660 全面屏鼻祖夏普新机酝酿中  http://www.cnbeta.com/articles/t\n",
-       "89605  89612                张怡  ...                 金融股一枝独秀 配置价值犹存  http://www.cs.com.cn/gppd/201706\n",
-       "89606  89613        胡淑丽_MN7479  ...       44岁女子约网友被拒暴雨中裸奔 交警为其披衣相随  http://news.163.com/17/0618/00/C\n",
-       "89607  89614               NaN  ...  葡森林火灾造成至少62人死亡 政府宣布进入紧急状态（组图）  http://world.huanqiu.com/hot/201\n",
-       "89608  89615               NaN  ...      一加手机5细节曝光：3300mAh、充半小时用1天  http://www.cnbeta.com/articles/t\n",
-       "89609  89616               NaN  ...     骁龙835在Windows 10上的性能表现有望改善  http://www.cnbeta.com/articles/t\n",
-       "89610  89617               NaN  ...           小米MIUI 9首批机型曝光：共计15款  http://www.cnbeta.com/articles/t\n",
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
        "\n",
-       "[89611 rows x 7 columns]>"
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>author</th>\n",
+       "      <th>source</th>\n",
+       "      <th>content</th>\n",
+       "      <th>feature</th>\n",
+       "      <th>title</th>\n",
+       "      <th>url</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>王子江 张寒</td>\n",
+       "      <td>新华社</td>\n",
+       "      <td>新华社德国杜塞尔多夫６月６日电题：乒乓女球迷　\\n　　新华社记者王子江、张寒\\n　　熊老...</td>\n",
+       "      <td>{\"type\":\"体育\",\"site\":\"新华社\",\"url\":\"http://home.x...</td>\n",
+       "      <td>（体育）题：乒乓女球迷</td>\n",
+       "      <td>http://home.xinhua-news.com/gdsd</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>夏文辉</td>\n",
+       "      <td>新华社</td>\n",
+       "      <td>\\n\\n2017年5月25日，在美国马萨诸塞州剑桥市，哈佛大学毕业生在毕业典礼上欢呼。（新华...</td>\n",
+       "      <td>{\"type\":\"其它\",\"site\":\"新华社\",\"url\":\"http://home.x...</td>\n",
+       "      <td>哈佛大学为何取消这些新生入选资格？</td>\n",
+       "      <td>http://home.xinhua-news.com/gdsd</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>张旌</td>\n",
+       "      <td>新华社</td>\n",
+       "      <td>\\n\\n2017年5月29日，在法国巴黎郊外的凡尔赛宫，法国总统马克龙出席新闻发布会。（新华...</td>\n",
+       "      <td>{\"type\":\"其它\",\"site\":\"新华社\",\"url\":\"http://home.x...</td>\n",
+       "      <td>法国议会选举　马克龙有望获“压倒性胜利”</td>\n",
+       "      <td>http://home.xinhua-news.com/gdsd</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>王衡</td>\n",
+       "      <td>新华社</td>\n",
+       "      <td>新华社兰州6月3日电（王衡、徐丹）记者从甘肃省交通运输厅获悉，甘肃近日集中开建高速公路、普通...</td>\n",
+       "      <td>{\"type\":\"宏观经济\",\"site\":\"新华社\",\"url\":\"http://home...</td>\n",
+       "      <td>（经济）甘肃集中开工35个重点交通建设项目</td>\n",
+       "      <td>http://home.xinhua-news.com/gdsd</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>邹峥</td>\n",
+       "      <td>新华社</td>\n",
+       "      <td>新华社照片，多伦多，2017年6月7日\\n（体育）（2）冰球——国家女子冰球队海外选秀在多伦...</td>\n",
+       "      <td>{\"type\":\"冰球\",\"site\":\"新华社\",\"url\":\"http://home.x...</td>\n",
+       "      <td>（体育）（2）冰球——国家女子冰球队海外选秀在多伦多展开</td>\n",
+       "      <td>http://home.xinhua-news.com/gdsd</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6</td>\n",
+       "      <td>郑焕松</td>\n",
+       "      <td>新华社</td>\n",
+       "      <td>新华社照片，北京，2017年6月7日\\n电影《血战湘江》举行清华大学巡映活动\\n6月6日，电...</td>\n",
+       "      <td>{\"type\":\"社会\",\"site\":\"新华社\",\"url\":\"http://home.x...</td>\n",
+       "      <td>（文化）（3）电影《血战湘江》举行清华大学巡映活动</td>\n",
+       "      <td>http://home.xinhua-news.com/gdsd</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>7</td>\n",
+       "      <td>郑焕松</td>\n",
+       "      <td>新华社</td>\n",
+       "      <td>新华社照片，北京，2017年6月7日\\n电影《血战湘江》举行清华大学巡映活动\\n6月6日，清...</td>\n",
+       "      <td>{\"type\":\"社会\",\"site\":\"新华社\",\"url\":\"http://home.x...</td>\n",
+       "      <td>（文化）（2）电影《血战湘江》举行清华大学巡映活动</td>\n",
+       "      <td>http://home.xinhua-news.com/gdsd</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>8</td>\n",
+       "      <td>郑焕松</td>\n",
+       "      <td>新华社</td>\n",
+       "      <td>新华社照片，北京，2017年6月7日\\n电影《血战湘江》举行清华大学巡映活动\\n6月6日，电...</td>\n",
+       "      <td>{\"type\":\"社会\",\"site\":\"新华社\",\"url\":\"http://home.x...</td>\n",
+       "      <td>（文化）（1）电影《血战湘江》举行清华大学巡映活动</td>\n",
+       "      <td>http://home.xinhua-news.com/gdsd</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>9</td>\n",
+       "      <td>LISELOTTE SABROE</td>\n",
+       "      <td>新华社</td>\n",
+       "      <td>新华社照片，外代，2017年6月7日\\n（外代二线）足球——国际友谊赛：德国平丹麦\\n6月6...</td>\n",
+       "      <td>{\"type\":\"足球\",\"site\":\"新华社\",\"url\":\"http://home.x...</td>\n",
+       "      <td>[9]（外代二线）足球——国际友谊赛：德国平丹麦</td>\n",
+       "      <td>http://home.xinhua-news.com/gdsd</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>10</td>\n",
+       "      <td>LISELOTTE SABROE</td>\n",
+       "      <td>新华社</td>\n",
+       "      <td>新华社照片，外代，2017年6月7日\\n（外代二线）足球——国际友谊赛：德国平丹麦\\n6月6...</td>\n",
+       "      <td>{\"type\":\"足球\",\"site\":\"新华社\",\"url\":\"http://home.x...</td>\n",
+       "      <td>[7]（外代二线）足球——国际友谊赛：德国平丹麦</td>\n",
+       "      <td>http://home.xinhua-news.com/gdsd</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id            author  ...                         title                               url\n",
+       "0   1            王子江 张寒  ...                  （体育）题：乒乓女球迷　  http://home.xinhua-news.com/gdsd\n",
+       "1   2               夏文辉  ...             哈佛大学为何取消这些新生入选资格？  http://home.xinhua-news.com/gdsd\n",
+       "2   3                张旌  ...          法国议会选举　马克龙有望获“压倒性胜利”  http://home.xinhua-news.com/gdsd\n",
+       "3   4                王衡  ...         （经济）甘肃集中开工35个重点交通建设项目  http://home.xinhua-news.com/gdsd\n",
+       "4   5                邹峥  ...  （体育）（2）冰球——国家女子冰球队海外选秀在多伦多展开  http://home.xinhua-news.com/gdsd\n",
+       "5   6               郑焕松  ...     （文化）（3）电影《血战湘江》举行清华大学巡映活动  http://home.xinhua-news.com/gdsd\n",
+       "6   7               郑焕松  ...     （文化）（2）电影《血战湘江》举行清华大学巡映活动  http://home.xinhua-news.com/gdsd\n",
+       "7   8               郑焕松  ...     （文化）（1）电影《血战湘江》举行清华大学巡映活动  http://home.xinhua-news.com/gdsd\n",
+       "8   9  LISELOTTE SABROE  ...      [9]（外代二线）足球——国际友谊赛：德国平丹麦  http://home.xinhua-news.com/gdsd\n",
+       "9  10  LISELOTTE SABROE  ...      [7]（外代二线）足球——国际友谊赛：德国平丹麦  http://home.xinhua-news.com/gdsd\n",
+       "\n",
+       "[10 rows x 7 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,30 +170,114 @@
     "import pandas as pd\n",
     "\n",
     "data = pd.read_csv('news_chinese.csv')\n",
-    "data.describe"
+    "data.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-26T04:51:54.304026Z",
-     "start_time": "2019-08-26T04:51:54.123261Z"
+     "end_time": "2019-08-26T16:11:39.193152Z",
+     "start_time": "2019-08-26T16:11:39.148145Z"
     }
    },
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Python 3.7.3\n"
+      "Python 3.6.9 :: Anaconda, Inc.\n"
      ]
     }
    ],
    "source": [
     "!python --version"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-08-26T16:11:41.473691Z",
+     "start_time": "2019-08-26T16:11:41.115690Z"
+    },
+    "pycharm": {
+     "is_executing": false
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": [
+      "# packages in environment at E:\\Soft\\Anaconda3:\n#\n# Name                    Version                   Build  Channel\n"
+     ],
+     "output_type": "stream"
+    }
+   ],
+   "source": [
+    "!conda list pyltp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-08-26T16:11:44.020302Z",
+     "start_time": "2019-08-26T16:11:44.013301Z"
+    },
+    "pycharm": {
+     "is_executing": false
+    }
+   },
+   "outputs": [
+    {
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-6-18599b20a0a3>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mpyltp\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mSegmentor\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0msegmentor\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mSegmentor\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0msegmentor\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mload\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"/path/to/your/cws/model\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mwords\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msegmentor\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msegment\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"元芳你怎么看\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"|\"\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mwords\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'pyltp'"
+     ],
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pyltp'",
+     "output_type": "error"
+    }
+   ],
+   "source": [
+    "from pyltp import Segmentor\n",
+    "segmentor = Segmentor()\n",
+    "segmentor.load(\"/path/to/your/cws/model\")\n",
+    "words = segmentor.segment(\"元芳你怎么看\")\n",
+    "print(\"|\".join(words))\n",
+    "segmentor.release()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": [
+      "<generator object Tokenizer.cut at 0x00000256B28FFA98>\n"
+     ],
+     "output_type": "stream"
+    }
+   ],
+   "source": [
+    "import jieba\n",
+    "segs = jieba.cut(\"元芳你怎么看\")\n",
+    "print(segs)\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
   }
  ],
  "metadata": {
@@ -131,6 +297,44 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.3"
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
