--- a/P1_trial.ipynb
+++ b/P1_trial.ipynb
@@ -1,171 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 1. 获取数据"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-08-26T15:46:02.414977Z",
      "start_time": "2019-08-26T15:46:00.915259Z"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>author</th>\n",
-       "      <th>source</th>\n",
-       "      <th>content</th>\n",
-       "      <th>feature</th>\n",
-       "      <th>title</th>\n",
-       "      <th>url</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>王子江 张寒</td>\n",
-       "      <td>新华社</td>\n",
-       "      <td>新华社德国杜塞尔多夫６月６日电题：乒乓女球迷　\\n　　新华社记者王子江、张寒\\n　　熊老...</td>\n",
-       "      <td>{\"type\":\"体育\",\"site\":\"新华社\",\"url\":\"http://home.x...</td>\n",
-       "      <td>（体育）题：乒乓女球迷</td>\n",
-       "      <td>http://home.xinhua-news.com/gdsd</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>夏文辉</td>\n",
-       "      <td>新华社</td>\n",
-       "      <td>\\n\\n2017年5月25日，在美国马萨诸塞州剑桥市，哈佛大学毕业生在毕业典礼上欢呼。（新华...</td>\n",
-       "      <td>{\"type\":\"其它\",\"site\":\"新华社\",\"url\":\"http://home.x...</td>\n",
-       "      <td>哈佛大学为何取消这些新生入选资格？</td>\n",
-       "      <td>http://home.xinhua-news.com/gdsd</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>张旌</td>\n",
-       "      <td>新华社</td>\n",
-       "      <td>\\n\\n2017年5月29日，在法国巴黎郊外的凡尔赛宫，法国总统马克龙出席新闻发布会。（新华...</td>\n",
-       "      <td>{\"type\":\"其它\",\"site\":\"新华社\",\"url\":\"http://home.x...</td>\n",
-       "      <td>法国议会选举　马克龙有望获“压倒性胜利”</td>\n",
-       "      <td>http://home.xinhua-news.com/gdsd</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>王衡</td>\n",
-       "      <td>新华社</td>\n",
-       "      <td>新华社兰州6月3日电（王衡、徐丹）记者从甘肃省交通运输厅获悉，甘肃近日集中开建高速公路、普通...</td>\n",
-       "      <td>{\"type\":\"宏观经济\",\"site\":\"新华社\",\"url\":\"http://home...</td>\n",
-       "      <td>（经济）甘肃集中开工35个重点交通建设项目</td>\n",
-       "      <td>http://home.xinhua-news.com/gdsd</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>邹峥</td>\n",
-       "      <td>新华社</td>\n",
-       "      <td>新华社照片，多伦多，2017年6月7日\\n（体育）（2）冰球——国家女子冰球队海外选秀在多伦...</td>\n",
-       "      <td>{\"type\":\"冰球\",\"site\":\"新华社\",\"url\":\"http://home.x...</td>\n",
-       "      <td>（体育）（2）冰球——国家女子冰球队海外选秀在多伦多展开</td>\n",
-       "      <td>http://home.xinhua-news.com/gdsd</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>6</td>\n",
-       "      <td>郑焕松</td>\n",
-       "      <td>新华社</td>\n",
-       "      <td>新华社照片，北京，2017年6月7日\\n电影《血战湘江》举行清华大学巡映活动\\n6月6日，电...</td>\n",
-       "      <td>{\"type\":\"社会\",\"site\":\"新华社\",\"url\":\"http://home.x...</td>\n",
-       "      <td>（文化）（3）电影《血战湘江》举行清华大学巡映活动</td>\n",
-       "      <td>http://home.xinhua-news.com/gdsd</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>7</td>\n",
-       "      <td>郑焕松</td>\n",
-       "      <td>新华社</td>\n",
-       "      <td>新华社照片，北京，2017年6月7日\\n电影《血战湘江》举行清华大学巡映活动\\n6月6日，清...</td>\n",
-       "      <td>{\"type\":\"社会\",\"site\":\"新华社\",\"url\":\"http://home.x...</td>\n",
-       "      <td>（文化）（2）电影《血战湘江》举行清华大学巡映活动</td>\n",
-       "      <td>http://home.xinhua-news.com/gdsd</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>8</td>\n",
-       "      <td>郑焕松</td>\n",
-       "      <td>新华社</td>\n",
-       "      <td>新华社照片，北京，2017年6月7日\\n电影《血战湘江》举行清华大学巡映活动\\n6月6日，电...</td>\n",
-       "      <td>{\"type\":\"社会\",\"site\":\"新华社\",\"url\":\"http://home.x...</td>\n",
-       "      <td>（文化）（1）电影《血战湘江》举行清华大学巡映活动</td>\n",
-       "      <td>http://home.xinhua-news.com/gdsd</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>9</td>\n",
-       "      <td>LISELOTTE SABROE</td>\n",
-       "      <td>新华社</td>\n",
-       "      <td>新华社照片，外代，2017年6月7日\\n（外代二线）足球——国际友谊赛：德国平丹麦\\n6月6...</td>\n",
-       "      <td>{\"type\":\"足球\",\"site\":\"新华社\",\"url\":\"http://home.x...</td>\n",
-       "      <td>[9]（外代二线）足球——国际友谊赛：德国平丹麦</td>\n",
-       "      <td>http://home.xinhua-news.com/gdsd</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>10</td>\n",
-       "      <td>LISELOTTE SABROE</td>\n",
-       "      <td>新华社</td>\n",
-       "      <td>新华社照片，外代，2017年6月7日\\n（外代二线）足球——国际友谊赛：德国平丹麦\\n6月6...</td>\n",
-       "      <td>{\"type\":\"足球\",\"site\":\"新华社\",\"url\":\"http://home.x...</td>\n",
-       "      <td>[7]（外代二线）足球——国际友谊赛：德国平丹麦</td>\n",
-       "      <td>http://home.xinhua-news.com/gdsd</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   id            author  ...                         title                               url\n",
-       "0   1            王子江 张寒  ...                  （体育）题：乒乓女球迷　  http://home.xinhua-news.com/gdsd\n",
-       "1   2               夏文辉  ...             哈佛大学为何取消这些新生入选资格？  http://home.xinhua-news.com/gdsd\n",
-       "2   3                张旌  ...          法国议会选举　马克龙有望获“压倒性胜利”  http://home.xinhua-news.com/gdsd\n",
-       "3   4                王衡  ...         （经济）甘肃集中开工35个重点交通建设项目  http://home.xinhua-news.com/gdsd\n",
-       "4   5                邹峥  ...  （体育）（2）冰球——国家女子冰球队海外选秀在多伦多展开  http://home.xinhua-news.com/gdsd\n",
-       "5   6               郑焕松  ...     （文化）（3）电影《血战湘江》举行清华大学巡映活动  http://home.xinhua-news.com/gdsd\n",
-       "6   7               郑焕松  ...     （文化）（2）电影《血战湘江》举行清华大学巡映活动  http://home.xinhua-news.com/gdsd\n",
-       "7   8               郑焕松  ...     （文化）（1）电影《血战湘江》举行清华大学巡映活动  http://home.xinhua-news.com/gdsd\n",
-       "8   9  LISELOTTE SABROE  ...      [9]（外代二线）足球——国际友谊赛：德国平丹麦  http://home.xinhua-news.com/gdsd\n",
-       "9  10  LISELOTTE SABROE  ...      [7]（外代二线）足球——国际友谊赛：德国平丹麦  http://home.xinhua-news.com/gdsd\n",
-       "\n",
-       "[10 rows x 7 columns]"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -174,110 +25,106 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-08-26T16:11:39.193152Z",
-     "start_time": "2019-08-26T16:11:39.148145Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Python 3.6.9 :: Anaconda, Inc.\n"
-     ]
-    }
-   ],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "!python --version"
+    "# 2. 获得所有表示“说”的意思的单词"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "复用第四课训练的模型"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-08-26T16:11:41.473691Z",
-     "start_time": "2019-08-26T16:11:41.115690Z"
-    },
-    "pycharm": {
-     "is_executing": false
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "text": [
-      "# packages in environment at E:\\Soft\\Anaconda3:\n#\n# Name                    Version                   Build  Channel\n"
-     ],
-     "output_type": "stream"
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "!conda list pyltp"
+    "data['content'].values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-08-26T16:11:44.020302Z",
-     "start_time": "2019-08-26T16:11:44.013301Z"
-    },
-    "pycharm": {
-     "is_executing": false
-    }
-   },
-   "outputs": [
-    {
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-6-18599b20a0a3>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mpyltp\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mSegmentor\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0msegmentor\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mSegmentor\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0msegmentor\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mload\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"/path/to/your/cws/model\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mwords\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msegmentor\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msegment\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"元芳你怎么看\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"|\"\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mwords\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'pyltp'"
-     ],
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'pyltp'",
-     "output_type": "error"
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
+    "# -*- coding: utf-8 -*-\n",
+    "import os\n",
+    "LTP_DATA_DIR = '.\\\\ltp_data_v3.4.0\\\\'  # ltp模型目录的路径\n",
+    "cws_model_path = os.path.join(LTP_DATA_DIR, 'cws.model')  # 分词模型路径，模型名称为`cws.model`\n",
+    "\n",
     "from pyltp import Segmentor\n",
-    "segmentor = Segmentor()\n",
-    "segmentor.load(\"/path/to/your/cws/model\")\n",
-    "words = segmentor.segment(\"元芳你怎么看\")\n",
-    "print(\"|\".join(words))\n",
-    "segmentor.release()"
+    "segmentor = Segmentor()  # 初始化实例\n",
+    "segmentor.load(cws_model_path)  # 加载模型\n",
+    "\n",
+    "def cut_words(text):\n",
+    "    words = segmentor.segment(text)  # 分词\n",
+    "    return words\n",
+    "#     segmentor.release()  # 释放模型"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "outputs": [
-    {
-     "name": "stdout",
-     "text": [
-      "<generator object Tokenizer.cut at 0x00000256B28FFA98>\n"
-     ],
-     "output_type": "stream"
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "import jieba\n",
-    "segs = jieba.cut(\"元芳你怎么看\")\n",
-    "print(segs)\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
-    }
-   }
+    "def preprocess_text(text):\n",
+    "    \"\"\"\n",
+    "    preprocess text, drop number, blank, stopwords\n",
+    "    return segments list\n",
+    "    \"\"\"\n",
+    "    stopwords=pd.read_csv('.\\\\stopwords.txt',index_col=False,quoting=3,sep=\"\\t\",names=['stopword'], encoding='utf-8')\n",
+    "    stopwords=stopwords['stopword'].values\n",
+    "    \n",
+    "    try:\n",
+    "        segs = list(cut_words(text))\n",
+    "        segs = [v for v in segs if not str(v).isdigit()]#去数字\n",
+    "        segs = list(filter(lambda x:x.strip(), segs)) #去左右空格\n",
+    "        segs = list(filter(lambda x:len(x)>1, segs))#长度为1的字符\n",
+    "        segs = list(filter(lambda x:x not in stopwords, segs)) #去掉停用词\n",
+    "    except Exception:\n",
+    "        print(Exception)\n",
+    "    return segs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "corpus = []\n",
+    "for graph in data['content'].values:\n",
+    "    sentences = graph.split('\\\\n')\n",
+    "    for sentence in sentences:\n",
+    "        segs = preprocess_text(sentence)\n",
+    "        corpus.append(' '.join(segs))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''\n",
+    "LineSentence(inp)：格式简单：一句话=一行; 单词已经过预处理并被空格分隔。\n",
+    "size：是每个词的向量维度； \n",
+    "window：是词向量训练时的上下文扫描窗口大小，窗口为5就是考虑前5个词和后5个词； \n",
+    "min-count：设置最低频率，默认是5，如果一个词语在文档中出现的次数小于5，那么就会丢弃； \n",
+    "workers：是训练的进程数（需要更精准的解释，请指正），默认是当前运行机器的处理器核数。这些参数先记住就可以了。\n",
+    "sg ({0, 1}, optional) – 模型的训练算法: 1: skip-gram; 0: CBOW\n",
+    "alpha (float, optional) – 初始学习率\n",
+    "iter (int, optional) – 迭代次数，默认为5\n",
+    "'''\n",
+    "model = Word2Vec(sentences=corpus, size=100, window=5, min_count=1, sg=1)"
+   ]
   }
  ],
  "metadata": {
@@ -296,7 +143,16 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.9"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "metadata": {
+     "collapsed": false
+    },
+    "source": []
+   }
   },
   "varInspector": {
    "cols": {
@@ -326,15 +182,6 @@
     "_Feature"
    ],
    "window_display": false
-  },
-  "pycharm": {
-   "stem_cell": {
-    "cell_type": "raw",
-    "source": [],
-    "metadata": {
-     "collapsed": false
-    }
-   }
   }
  },
  "nbformat": 4,
