完成词向量

--- a/P1_trial.ipynb
+++ b/P1_trial.ipynb
@@ -9,11 +9,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-26T15:46:02.414977Z",
-     "start_time": "2019-08-26T15:46:00.915259Z"
+     "end_time": "2019-08-27T17:22:29.856194Z",
+     "start_time": "2019-08-27T17:22:28.504835Z"
     }
    },
    "outputs": [],
@@ -21,7 +21,7 @@
     "import pandas as pd\n",
     "\n",
     "data = pd.read_csv('news_chinese.csv')\n",
-    "data.head(10)"
+    "data = data.dropna()"
    ]
   },
   {
@@ -32,25 +32,14 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "复用第四课训练的模型"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data['content'].values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 26,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-08-27T16:56:04.396204Z",
+     "start_time": "2019-08-27T16:56:04.197205Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# -*- coding: utf-8 -*-\n",
@@ -70,8 +59,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 36,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-08-27T17:20:02.262676Z",
+     "start_time": "2019-08-27T17:20:02.257707Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from pyltp import SentenceSplitter\n",
+    "\n",
+    "def split_sentence(text):\n",
+    "    '''\n",
+    "    split text into single sentence without '\\n'\n",
+    "    '''\n",
+    "    sentences = []\n",
+    "    try:\n",
+    "        sentence_list = text.split('\\\\n')\n",
+    "        for sentence in sentence_list:\n",
+    "            splited_sentence = SentenceSplitter.split(sentence)  # 分句\n",
+    "            sentences.extend(list(splited_sentence))\n",
+    "    except Exception:\n",
+    "        print('split_sentence exception:' + str(text))\n",
+    "        print(Exception)\n",
+    "    return sentences"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-08-27T17:00:52.305342Z",
+     "start_time": "2019-08-27T17:00:52.301341Z"
+    }
+   },
    "outputs": [],
    "source": [
     "def preprocess_text(text):\n",
@@ -79,40 +102,71 @@
     "    preprocess text, drop number, blank, stopwords\n",
     "    return segments list\n",
     "    \"\"\"\n",
-    "    stopwords=pd.read_csv('.\\\\stopwords.txt',index_col=False,quoting=3,sep=\"\\t\",names=['stopword'], encoding='utf-8')\n",
-    "    stopwords=stopwords['stopword'].values\n",
+    "#     stopwords=pd.read_csv('.\\\\stopwords.txt',index_col=False,quoting=3,sep=\"\\t\",names=['stopword'], encoding='utf-8')\n",
+    "#     stopwords=stopwords['stopword'].values\n",
+    "    if len(text) == 1:\n",
+    "        return ''\n",
     "    \n",
     "    try:\n",
     "        segs = list(cut_words(text))\n",
-    "        segs = [v for v in segs if not str(v).isdigit()]#去数字\n",
+    "#         segs = [v for v in segs if not str(v).isdigit()]#去数字\n",
     "        segs = list(filter(lambda x:x.strip(), segs)) #去左右空格\n",
-    "        segs = list(filter(lambda x:len(x)>1, segs))#长度为1的字符\n",
-    "        segs = list(filter(lambda x:x not in stopwords, segs)) #去掉停用词\n",
+    "#         segs = list(filter(lambda x:len(x)>1, segs))#长度为1的字符\n",
+    "#         segs = list(filter(lambda x:x not in stopwords, segs)) #去掉停用词\n",
     "    except Exception:\n",
+    "        print('preprocess_text exception:' + str(text))\n",
     "        print(Exception)\n",
     "    return segs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 38,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-08-27T17:25:20.492826Z",
+     "start_time": "2019-08-27T17:22:50.281775Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "corpus = []\n",
-    "for graph in data['content'].values:\n",
-    "    sentences = graph.split('\\\\n')\n",
-    "    for sentence in sentences:\n",
-    "        segs = preprocess_text(sentence)\n",
-    "        corpus.append(' '.join(segs))"
+    "'''\n",
+    "preprocess and write corpus to file for future use\n",
+    "'''\n",
+    "with open('corpus.txt', 'w', encoding='utf-8') as f:\n",
+    "    for graph in data['content'].values:\n",
+    "        sentences = split_sentence(graph)  # 分句\n",
+    "        for sentence in sentences:\n",
+    "            words = preprocess_text(sentence)\n",
+    "            if words == '':\n",
+    "                continue\n",
+    "            f.write(' '.join(words))\n",
+    "            f.write('\\n')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 42,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-08-27T17:44:09.938215Z",
+     "start_time": "2019-08-27T17:41:54.444315Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "E:\\Soft\\Anaconda3\\envs\\py36\\lib\\site-packages\\smart_open\\smart_open_lib.py:398: UserWarning: This function is deprecated, use smart_open.open instead. See the migration notes for details: https://github.com/RaRe-Technologies/smart_open/blob/master/README.rst#migrating-to-the-new-open-function\n",
+      "  'See the migration notes for details: %s' % _MIGRATION_NOTES_URL\n"
+     ]
+    }
+   ],
    "source": [
+    "from gensim.models import Word2Vec\n",
+    "from gensim.models.word2vec import LineSentence\n",
+    "corpus = LineSentence('corpus.txt')\n",
     "'''\n",
     "LineSentence(inp)：格式简单：一句话=一行; 单词已经过预处理并被空格分隔。\n",
     "size：是每个词的向量维度； \n",
@@ -123,8 +177,17 @@
     "alpha (float, optional) – 初始学习率\n",
     "iter (int, optional) – 迭代次数，默认为5\n",
     "'''\n",
-    "model = Word2Vec(sentences=corpus, size=100, window=5, min_count=1, sg=1)"
+    "model = Word2Vec(sentences=corpus, size=100, window=5, min_count=1, sg=1)\n",
+    "\n",
+    "model.save(\".\\\\word2vec.model\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
