find similar words with search

--- a/P1_trial.ipynb
+++ b/P1_trial.ipynb
@@ -271,14 +271,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[('表示', 0.8703572750091553), ('告诉', 0.8542202115058899), ('指出', 0.7788625955581665), ('认为', 0.7690681219100952), ('说道', 0.7643224000930786), ('坦言', 0.7485840916633606), ('介绍', 0.7473160624504089), ('看来', 0.7389413118362427), ('透露', 0.6973441243171692), ('写道', 0.6708030104637146)]\n"
+      "[('表示', 0.8703572750091553), ('告诉', 0.8542202115058899), ('指出', 0.7788625955581665), ('认为', 0.7690681219100952), ('说道', 0.7643224000930786), ('坦言', 0.7485840916633606), ('介绍', 0.7473160624504089), ('看来', 0.7389413118362427), ('透露', 0.6973441243171692), ('写道', 0.6708030104637146), ('举例', 0.6471209526062012), ('强调', 0.645220160484314), ('深有感触', 0.6425442695617676), ('称', 0.6364630460739136), ('话', 0.6193505525588989), ('直言', 0.6076681017875671), ('说法', 0.6055251955986023), ('提到', 0.6045020818710327), ('笑言', 0.5967453718185425), ('如是说', 0.5966818332672119)]\n"
      ]
     },
     {
@@ -291,7 +291,7 @@
     }
    ],
    "source": [
-    "similar_words = model.most_similar('说')\n",
+    "similar_words = model.most_similar('说', topn=20)\n",
     "print(similar_words)"
    ]
   },
@@ -325,14 +325,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
+   "execution_count": 29,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[('表示', 0.8703572750091553), ('告诉', 0.8542202115058899), ('指出', 0.7788625955581665), ('认为', 0.7690681219100952), ('说道', 0.7643224000930786), ('坦言', 0.7485840916633606), ('介绍', 0.7473160624504089), ('看来', 0.7389413118362427), ('透露', 0.6973441243171692), ('写道', 0.6708030104637146)]\n"
+      "[('表示', 0.8703572750091553), ('告诉', 0.8542202115058899), ('指出', 0.7788625955581665), ('认为', 0.7690681219100952), ('说道', 0.7643224000930786), ('坦言', 0.7485840916633606), ('介绍', 0.7473160624504089), ('看来', 0.7389413118362427), ('透露', 0.6973441243171692), ('写道', 0.6708030104637146), ('举例', 0.6471209526062012), ('强调', 0.645220160484314), ('深有感触', 0.6425442695617676), ('称', 0.6364630460739136), ('话', 0.6193505525588989), ('直言', 0.6076681017875671), ('说法', 0.6055251955986023), ('提到', 0.6045020818710327), ('笑言', 0.5967453718185425), ('如是说', 0.5966818332672119)]\n"
      ]
     },
     {
@@ -345,16 +347,124 @@
     }
    ],
    "source": [
-    "similar = model.similar_by_word('说')\n",
+    "similar = model.similar_by_word('说', topn=20)\n",
     "print(similar)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def find_similar_words(words, max_size, model):\n",
+    "    similar_words = []\n",
+    "    seen = []\n",
+    "    unseen = ['说']\n",
+    "    while len(similar_words) < max_size and len(unseen) != 0:\n",
+    "        unseen_word = unseen.pop(0)\n",
+    "        if unseen_word in similar_words:\n",
+    "            continue\n",
+    "        similars = [w for w, p in model.most_similar(unseen_word, topn=20)]\n",
+    "        unseen.extend(similars)\n",
+    "        similar_words.append(unseen_word)\n",
+    "        seen.append(unseen_word)\n",
+    "    return similar_words\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Building prefix dict from the default dictionary ...\n",
+      "Dumping model to file cache C:\\Users\\vick_\\AppData\\Local\\Temp\\jieba.cache\n",
+      "Loading model cost 0.904 seconds.\n",
+      "Prefix dict has been built succesfully.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import jieba\n",
+    "\n",
+    "words = []\n",
+    "with open('corpus.txt', 'r', encoding='utf-8') as rf:\n",
+    "    for line in rf.readlines():\n",
+    "        words.extend(list(jieba.cut(line)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "33172819"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(words)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "E:\\Anaconda3\\envs\\py36\\lib\\site-packages\\ipykernel_launcher.py:9: DeprecationWarning: Call to deprecated `most_similar` (Method will be removed in 4.0.0, use self.wv.most_similar() instead).\n",
+      "  if __name__ == '__main__':\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['说',\n",
+       " '表示',\n",
+       " '告诉',\n",
+       " '指出',\n",
+       " '认为',\n",
+       " '说道',\n",
+       " '坦言',\n",
+       " '介绍',\n",
+       " '看来',\n",
+       " '透露',\n",
+       " '写道',\n",
+       " '举例',\n",
+       " '强调',\n",
+       " '深有感触',\n",
+       " '称',\n",
+       " '话',\n",
+       " '直言',\n",
+       " '说法',\n",
+       " '提到',\n",
+       " '笑言']"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "similar_words = find_similar_words(words, 20, model)\n",
+    "similar_words"
+   ]
   }
  ],
  "metadata": {
