--- a/P1_trial.ipynb
+++ b/P1_trial.ipynb
@@ -250,16 +250,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-09T18:07:03.836703Z",
+     "start_time": "2019-09-09T18:06:57.589403Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "E:\\Soft\\Anaconda3\\envs\\py36\\lib\\site-packages\\gensim\\utils.py:1197: UserWarning: detected Windows; aliasing chunkize to chunkize_serial\n",
+      "  warnings.warn(\"detected Windows; aliasing chunkize to chunkize_serial\")\n",
+      "E:\\Soft\\Anaconda3\\envs\\py36\\lib\\site-packages\\smart_open\\smart_open_lib.py:398: UserWarning: This function is deprecated, use smart_open.open instead. See the migration notes for details: https://github.com/RaRe-Technologies/smart_open/blob/master/README.rst#migrating-to-the-new-open-function\n",
+      "  'See the migration notes for details: %s' % _MIGRATION_NOTES_URL\n"
+     ]
+    }
+   ],
+   "source": [
+    "'''\n",
+    "load gensim word2vec model\n",
+    "'''\n",
+    "from gensim.models import Word2Vec\n",
+    "model = Word2Vec.load(\".\\\\word2vec.model\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-09T18:07:39.145355Z",
+     "start_time": "2019-09-09T18:07:39.133334Z"
+    }
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "223587"
+       "198596"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,22 +305,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-09T18:07:42.600970Z",
+     "start_time": "2019-09-09T18:07:42.228263Z"
+    }
+   },
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[('表示', 0.8703572750091553), ('告诉', 0.8542202115058899), ('指出', 0.7788625955581665), ('认为', 0.7690681219100952), ('说道', 0.7643224000930786), ('坦言', 0.7485840916633606), ('介绍', 0.7473160624504089), ('看来', 0.7389413118362427), ('透露', 0.6973441243171692), ('写道', 0.6708030104637146), ('举例', 0.6471209526062012), ('强调', 0.645220160484314), ('深有感触', 0.6425442695617676), ('称', 0.6364630460739136), ('话', 0.6193505525588989), ('直言', 0.6076681017875671), ('说法', 0.6055251955986023), ('提到', 0.6045020818710327), ('笑言', 0.5967453718185425), ('如是说', 0.5966818332672119)]\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "E:\\Anaconda3\\envs\\py36\\lib\\site-packages\\ipykernel_launcher.py:1: DeprecationWarning: Call to deprecated `most_similar` (Method will be removed in 4.0.0, use self.wv.most_similar() instead).\n",
+      "E:\\Soft\\Anaconda3\\envs\\py36\\lib\\site-packages\\ipykernel_launcher.py:1: DeprecationWarning: Call to deprecated `most_similar` (Method will be removed in 4.0.0, use self.wv.most_similar() instead).\n",
       "  \"\"\"Entry point for launching an IPython kernel.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('表示', 0.8741297125816345), ('告诉', 0.8271186351776123), ('指出', 0.788396954536438), ('认为', 0.7727850675582886), ('介绍', 0.7356007695198059), ('说道', 0.7067561745643616), ('看来', 0.6960127353668213), ('写道', 0.6913279891014099), ('话', 0.6870427131652832), ('强调', 0.6705794334411621), ('坦言', 0.6692733764648438), ('提到', 0.6580647230148315), ('称', 0.6515368223190308), ('透露', 0.6492000222206116), ('举例', 0.6212161779403687), ('形容', 0.611984372138977), ('证实', 0.6084652543067932), ('得知', 0.606695294380188), ('说法', 0.6029568910598755), ('问', 0.6021037101745605)]\n"
      ]
     }
    ],
@@ -297,22 +336,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-09T18:07:48.504598Z",
+     "start_time": "2019-09-09T18:07:48.500620Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Please provide the similarity between these two words:\n",
-      "0.4619258715508007\n"
+      "0.3628039284301186\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "E:\\Anaconda3\\envs\\py36\\lib\\site-packages\\ipykernel_launcher.py:1: DeprecationWarning: Call to deprecated `similarity` (Method will be removed in 4.0.0, use self.wv.similarity() instead).\n",
+      "E:\\Soft\\Anaconda3\\envs\\py36\\lib\\site-packages\\ipykernel_launcher.py:1: DeprecationWarning: Call to deprecated `similarity` (Method will be removed in 4.0.0, use self.wv.similarity() instead).\n",
       "  \"\"\"Entry point for launching an IPython kernel.\n"
      ]
     }
@@ -325,8 +369,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-09T18:07:52.778618Z",
+     "start_time": "2019-09-09T18:07:52.764648Z"
+    },
     "scrolled": false
    },
    "outputs": [
@@ -334,14 +382,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[('表示', 0.8703572750091553), ('告诉', 0.8542202115058899), ('指出', 0.7788625955581665), ('认为', 0.7690681219100952), ('说道', 0.7643224000930786), ('坦言', 0.7485840916633606), ('介绍', 0.7473160624504089), ('看来', 0.7389413118362427), ('透露', 0.6973441243171692), ('写道', 0.6708030104637146), ('举例', 0.6471209526062012), ('强调', 0.645220160484314), ('深有感触', 0.6425442695617676), ('称', 0.6364630460739136), ('话', 0.6193505525588989), ('直言', 0.6076681017875671), ('说法', 0.6055251955986023), ('提到', 0.6045020818710327), ('笑言', 0.5967453718185425), ('如是说', 0.5966818332672119)]\n"
+      "[('表示', 0.8741297125816345), ('告诉', 0.8271186351776123), ('指出', 0.788396954536438), ('认为', 0.7727850675582886), ('介绍', 0.7356007695198059), ('说道', 0.7067561745643616), ('看来', 0.6960127353668213), ('写道', 0.6913279891014099), ('话', 0.6870427131652832), ('强调', 0.6705794334411621), ('坦言', 0.6692733764648438), ('提到', 0.6580647230148315), ('称', 0.6515368223190308), ('透露', 0.6492000222206116), ('举例', 0.6212161779403687), ('形容', 0.611984372138977), ('证实', 0.6084652543067932), ('得知', 0.606695294380188), ('说法', 0.6029568910598755), ('问', 0.6021037101745605)]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "E:\\Anaconda3\\envs\\py36\\lib\\site-packages\\ipykernel_launcher.py:1: DeprecationWarning: Call to deprecated `similar_by_word` (Method will be removed in 4.0.0, use self.wv.similar_by_word() instead).\n",
+      "E:\\Soft\\Anaconda3\\envs\\py36\\lib\\site-packages\\ipykernel_launcher.py:1: DeprecationWarning: Call to deprecated `similar_by_word` (Method will be removed in 4.0.0, use self.wv.similar_by_word() instead).\n",
       "  \"\"\"Entry point for launching an IPython kernel.\n"
      ]
     }
@@ -353,8 +401,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-09T18:08:00.394110Z",
+     "start_time": "2019-09-09T18:08:00.388083Z"
+    }
+   },
    "outputs": [],
    "source": [
     "def find_similar_words(words, max_size, model):\n",
@@ -375,16 +428,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-09T18:09:59.489220Z",
+     "start_time": "2019-09-09T18:08:01.548822Z"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "Building prefix dict from the default dictionary ...\n",
-      "Dumping model to file cache C:\\Users\\vick_\\AppData\\Local\\Temp\\jieba.cache\n",
-      "Loading model cost 0.904 seconds.\n",
+      "Dumping model to file cache C:\\Users\\Vick\\AppData\\Local\\Temp\\jieba.cache\n",
+      "Loading model cost 0.756 seconds.\n",
       "Prefix dict has been built succesfully.\n"
      ]
     }
@@ -400,8 +458,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-09T18:12:44.824969Z",
+     "start_time": "2019-09-09T18:12:44.819997Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -409,7 +472,7 @@
        "33172819"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -420,14 +483,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-09T18:12:49.614969Z",
+     "start_time": "2019-09-09T18:12:49.452969Z"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "E:\\Anaconda3\\envs\\py36\\lib\\site-packages\\ipykernel_launcher.py:9: DeprecationWarning: Call to deprecated `most_similar` (Method will be removed in 4.0.0, use self.wv.most_similar() instead).\n",
+      "E:\\Soft\\Anaconda3\\envs\\py36\\lib\\site-packages\\ipykernel_launcher.py:9: DeprecationWarning: Call to deprecated `most_similar` (Method will be removed in 4.0.0, use self.wv.most_similar() instead).\n",
       "  if __name__ == '__main__':\n"
      ]
     },
@@ -439,24 +507,24 @@
        " '告诉',\n",
        " '指出',\n",
        " '认为',\n",
-       " '说道',\n",
-       " '坦言',\n",
        " '介绍',\n",
+       " '说道',\n",
        " '看来',\n",
-       " '透露',\n",
        " '写道',\n",
-       " '举例',\n",
-       " '强调',\n",
-       " '深有感触',\n",
-       " '称',\n",
        " '话',\n",
-       " '直言',\n",
-       " '说法',\n",
+       " '强调',\n",
+       " '坦言',\n",
        " '提到',\n",
-       " '笑言']"
+       " '称',\n",
+       " '透露',\n",
+       " '举例',\n",
+       " '形容',\n",
+       " '证实',\n",
+       " '得知',\n",
+       " '说法']"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -465,6 +533,109 @@
     "similar_words = find_similar_words(words, 20, model)\n",
     "similar_words"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 3. 使用 NER，Dependency Parsing等对句子形式进行解析"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3.1 词性标注"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-09T18:54:36.383711Z",
+     "start_time": "2019-09-09T18:54:35.891714Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['新华社', '德国', '杜塞尔多夫', '６月', '６日', '电', '题', '：', '乒乓', '女', '球迷\\n']\n",
+      "ni\tns\tns\tnt\tnt\tn\tn\twp\tj\tb\tn\n"
+     ]
+    }
+   ],
+   "source": [
+    "# -*- coding: utf-8 -*-\n",
+    "import os\n",
+    "LTP_DATA_DIR = '.\\\\ltp_data_v3.4.0\\\\'  # ltp模型目录的路径\n",
+    "pos_model_path = os.path.join(LTP_DATA_DIR, 'pos.model')  # 词性标注模型路径，模型名称为`pos.model`\n",
+    "\n",
+    "from pyltp import Postagger\n",
+    "postagger = Postagger() # 初始化实例\n",
+    "postagger.load(pos_model_path)  # 加载模型\n",
+    "\n",
+    "with open('corpus.txt', 'r', encoding='utf-8') as f:\n",
+    "    line = f.readline()\n",
+    "    words = line.split(' ')\n",
+    "print(words)\n",
+    "postags = postagger.postag(words)  # 词性标注\n",
+    "\n",
+    "print('\\t'.join(postags))\n",
+    "postagger.release()  # 释放模型"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3.2 命名实体识别"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-09T18:56:32.223806Z",
+     "start_time": "2019-09-09T18:56:31.523153Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "S-Ni\tB-Ns\tE-Ns\tO\tO\tO\tO\tO\tO\tO\tO\n"
+     ]
+    }
+   ],
+   "source": [
+    "# -*- coding: utf-8 -*-\n",
+    "import os\n",
+    "LTP_DATA_DIR = '.\\\\ltp_data_v3.4.0\\\\'  # ltp模型目录的路径\n",
+    "ner_model_path = os.path.join(LTP_DATA_DIR, 'ner.model')  # 命名实体识别模型路径，模型名称为`pos.model`\n",
+    "\n",
+    "from pyltp import NamedEntityRecognizer\n",
+    "recognizer = NamedEntityRecognizer() # 初始化实例\n",
+    "recognizer.load(ner_model_path)  # 加载模型\n",
+    "\n",
+    "# words = ['元芳', '你', '怎么', '看']\n",
+    "# postags = ['nh', 'r', 'r', 'v']\n",
+    "netags = recognizer.recognize(words, postags)  # 命名实体识别\n",
+    "\n",
+    "print('\\t'.join(netags))\n",
+    "recognizer.release()  # 释放模型"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
